<resources>

    <string name="app_name">Volunteers IQ</string>


    <!--App  -->
    <string name="some_error">Some error occurred!</string>
    <string name="loading">loading</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_item_found">No item found</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any">Any Gender</string>
    <string name="retry">Retry</string>
    <string name="saving">Saving…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <!-- Intro -->
    <string name="intro_evaluation">Evolution of society</string>
    <string name="intro_evaluation_description">Voluntary activities are the most important public activities that contribute to the maintenance of the development of society</string>

    <string name="intro_skills">Acquire skills</string>
    <string name="intro_skills_description">Volunteering helps you gain new skills or improve your skills</string>

    <string name="intro_jobs">Jobs</string>
    <string name="intro_jobs_description">Most business managers prefer to employ someone who has experience in the field of volunteering</string>

    <string name="intro_go_now">Let\'s start</string>
    <string name="intro_go_now_description">Participate in volunteer campaigns and be always in the lead</string>

    <!-- Sign In -->
    <string name="great_to_see_you_again">Great to see you again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_up">Or sign up</string>

    <!-- Forget Password -->
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="forgot_password_description">Don\'t worry we just need your registered email id to send you password reset instructions.</string>
    <string name="email_is_sent_successfully">Email is sent successfully</string>
    <string name="check_email">Check your email for further instructions</string>

    <!-- Sing Up -->
    <string name="sign_up_welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in">Or sign in</string>

    <!-- Change Password -->
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="update_password">Update Password</string>
    <string name="current_password_not_correct">The current password is not correct</string>


    <!-- Base Profile Info -->
    <string name="done">Done</string>
    <string name="about_your">About your</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birth_of_day">Birth Of Day</string>


    <!-- validation -->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password</string>
    <string name="password_does_not_match">Password does not match</string>
    <!--<strtitlename="empty_confirm_password">Please provide a non empty confirm password.</string>-->
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="empty_name">Please provide a non empty name.</string>
    <string name="empty_birth_of_date">Please select your birth of date .</string>
    <string name="not_match_password">Passwords do not match</string>


    <!-- accessibility -->
    <string name="img_logo" translatable="false">img logo</string>
    <string name="img_bottom_description" translatable="false">bottom_image_description</string>

    <!-- Bottom bar menu -->
    <string name="home">Home</string>
    <string name="group">Group</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="account">Account</string>
    <string name="activity">Activity</string>

    <!-- campaign post -->
    <string name="group_name_views_date">%1$s . %2$d views . %3$s </string>

    <!-- list of group info -->
    <string name="campaigns_number">%1$d Campaign </string>
    <string name="edit">Edit</string>

    <!-- profile  info -->

    <string name="edit_profile">Edit Profile</string>
    <string name="profile_info">Profile Info</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone Number</string>
    <string name="bio_profile">Bio</string>
    <string name="bio_placeholder" translatable="false">-----------------------------------</string>
    <string name="permission_deny">Permission deny</string>
    <string name="read_external_storage_rationale_for_select_image">App need  storage permission to allow you to select image</string>
    <string name="txt_name_placeholder" translatable="false">-------</string>
    <string name="txt_bio_placeholder" translatable="false">-----------------------------------</string>
    <string name="helpful">Helpful</string>
    <string name="unhelpful">Unhelpful</string>
    <string name="not_attend">Not Attend</string>
    <string name="campaign_join_count">Joined with %1$d campaigns</string>
    <string name="xp_point" translatable="false">%1$d XP</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>


    <!-- Campaign Detail -->

    <string name="views_count">%1$d views</string>
    <string name="views_count_and_edited">%1$d views . edited in %2$s</string>
    <string name="publish_date">Publish on %1$s</string>
    <string name="description">Description</string>
    <string name="requirement">Requirement</string>
    <string name="join">join</string>
    <string name="campaign_requirement">- %1$d Member \n\n- For %2$s \n\n- More then %3$d year </string>
    <string name="campaign_member">%1$d Member</string>
    <string name="campaigns">Campaigns</string>
    <string name="leave">Leave</string>
    <string name="full_campaign">This campaign is FULL</string>
    <string name="this_campaign_for_male">This campaign for male only </string>
    <string name="this_campaign_for_female">This campaign for female only </string>
    <string name="your_age_is_less_then_required">Your age is less then required</string>
    <string name="join_date">Join  %1$s</string>
    <string name="campaign_detail">Campaign Detail</string>
    <string name="member">Members</string>
    <string name="rate_member">Rate Members</string>
    <string name="make_your_live_better">Make your live Better</string>
    <string name="not_allow_rate_member_now">You can rate members after one day of start campaign</string>
    <string name="not_allow_leave_now">Not allow to leave now</string>
    <string name="campaign_is_finish">Good work campaign is finished</string>
    <string name="on_leave_campaign">Do you want really to leave this campaign</string>
    <string name="not_allow_join_now">You can join before one day of start campaign</string>


    <!-- Group detail  -->
    <string name="group_detail">Group Detail</string>
    <string name="view_all">view all</string>

    <!-- human readable elapse time  -->
    <string name="less_then_minute">less then minutes</string>
    <string name="since_x_minutes">since %1$d minutes</string>
    <string name="since_x_hours">since %1$d hours</string>
    <string name="since_x_days">since %1$d days</string>
    <string name="since_x_weeks">since %1$d weeks</string>


    <!-- create group -->
    <string name="bio_group">Bio</string>
    <string name="group_campaigns">Group Campaigns</string>
    <string name="create_group">Create Group</string>
    <string name="create">create</string>
    <string name="please_select_img">Please select image for logo</string>
    <!-- my groups -->
    <string name="my_group_toolbar">My Group</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="edit_group">Edit Group</string>
    <!-- add campaign -->
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="age">Less Age</string>
    <string name="max_members">Max Members</string>
    <string name="add_campaign">Add Campaign</string>
    <string name="map">Map</string>
    <string name="please_select_start_date">Please select start date.</string>
    <string name="please_select_start_time">Please select start time.</string>
    <string name="please_select_required_age">Please select required age</string>
    <string name="please_select_max_count_members">please select maximum count member required of campaign</string>
    <string name="required_age_should_be_in_range_10_100">Required age should be in the range 10 to 100</string>
    <string name="max_count_member_should_be_in_range_10_1000">max count member should be in the range of 5 to 1000</string>
    <string name="error_while_upload_campaign">Error while upload campaign</string>
    <string name="empty_description">Please provide a non empty description</string>
    <string name="edit_campaign">Edit Campaign</string>
    <string name="required_age_should_be_equal_or_greater_then_old_age">required age should be equal or greater than old age</string>
    <string name="required_max_member_should_be_equal_or_greater_then_old_max_member">max member should be equal or greater than old max member</string>

    <!-- Group Campaign Adapter -->
    <string name="upload_date_and_views_count">%1$s . %2$d views</string>
    <string name="user_rated_done">User rated done</string>
    <string name="text_placeholder" translatable="false">-----</string>

    <!-- Not sign in layout -->
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy"><![CDATA[Terms & privacy policy]]></string>
    <string name="not_sign_in_message">Sign in to join with a lot of campaign and help to make country better</string>
    <string name="campaign_location">Campaign location</string>



</resources>
