<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".ui.account.signin.SignInFragment">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/img_logo" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_your"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <com.satsuware.usefulviews.LabelledSpinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:hint="@string/gender"
            app:spinnerEntries="@array/gender"
            app:labelText="@string/gender"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilBirthOfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/birthOfDayField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_of_day"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnDone"
            style="@style/ButtonColoredStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:text="@string/done" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>

        <ImageView
            android:id="@+id/imgAnimateBottom"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/bottom_img"
            android:contentDescription="@string/img_bottom_description"/>

    </LinearLayout>

</ScrollView>


