<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include
            android:id="@+id/profile_header"
            layout="@layout/my_account_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/myGroup"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/my_group_toolbar"
            app:drawableStartCompat="@drawable/ic_group_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_header" />


        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/myProfile"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            app:drawableStartCompat="@drawable/ic_account_box_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myGroup" />

        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/signOut"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:drawableStartCompat="@drawable/ic_exit_to_app_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myProfile" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/divider"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signOut" />


        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/termsAndPrivacyPolicy"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/privacy_policy"
            app:drawableStartCompat="@drawable/ic_lock_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/feedback"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            app:drawableStartCompat="@drawable/ic_feedback_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/termsAndPrivacyPolicy" />


        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/help"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            app:drawableStartCompat="@drawable/ic_help_24dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedback" />

        <com.teaml.iq.volunteer.utils.custom.view.CustomTextView
            android:id="@+id/about"
            style="@style/ButtonWithDrawableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/about"
            app:drawableStartCompat="@drawable/ic_info_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/help" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>